[tool.poetry]
name = "cuda-sgp4"
version = "0.1.0"
description = "CUDA accelerated SGP4 satellite orbit propagation"
authors = ["Maxwell Calkin <101308415+MaxwellCalkin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.59.1"
numpy = "^1.24.0"
astropy = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
sgp4 = "^2.24"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 